Adds cascading disable for A1 and A2 forms
Adds cascading disable for A1 and A2 forms for race related questions. If one option is selected then subsequent options will be disabled to prevent form submission errors.

--- a/src/UDS.Net.Web/Views/CoParticipantDemographics/EditFVP.cshtml
+++ b/src/UDS.Net.Web/Views/CoParticipantDemographics/EditFVP.cshtml
@@ -96,7 +96,7 @@
                             </div>
                             <div>
                                 <input class="isNewParticipantToggle" type="radio" asp-for="HispanicLatinoEthnicity" value="9" name="HispanicLatinoEthnicity" id="HispanicLatinoEthnicity[3]" data-toggle-values="[0,9]" data-toggle-targets="EthnicOrigins" /><span class="badge badge-pill badge-light">9</span>
-                                <label for="HispanicLatinoEthnicity[3]">Uknown (if Unknown, SKIP TO QUESTION 5)</label>
+                                <label for="HispanicLatinoEthnicity[3]">Unknown (if Unknown, SKIP TO QUESTION 5)</label>
                             </div>
                         </td>
                     </tr>
@@ -150,33 +150,33 @@
                         </td>
                         <td colspan="3">
                             <div>
-                                <input type="radio" asp-for="Race" value="1" name="Race" id="Race[1]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">1</span>
+                                <input type="radio" asp-for="Race" value="1" name="Race" id="Race[1]" /><span class="badge badge-pill badge-light">1</span>
                                 <label for="Race[1]">White</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="Race" value="2" name="Race" id="Race[2]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">2</span>
+                                <input type="radio" asp-for="Race" value="2" name="Race" id="Race[2]" /><span class="badge badge-pill badge-light">2</span>
                                 <label for="Race[2]">Black or African American</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="Race" value="3" name="Race" id="Race[3]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">3</span>
+                                <input type="radio" asp-for="Race" value="3" name="Race" id="Race[3]" /><span class="badge badge-pill badge-light">3</span>
                                 <label for="Race[3]">American Indian or Alaska Native</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="Race" value="4" name="Race" id="Race[4]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">4</span>
+                                <input type="radio" asp-for="Race" value="4" name="Race" id="Race[4]" /><span class="badge badge-pill badge-light">4</span>
                                 <label for="Race[4]">Native Hawaiian or other Pacific Islander</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="Race" value="5" name="Race" id="Race[5]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">5</span>
+                                <input type="radio" asp-for="Race" value="5" name="Race" id="Race[5]" /><span class="badge badge-pill badge-light">5</span>
                                 <label for="Race[5]">Asian</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="Race" value="50" name="Race" id="Race[6]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">50</span>
+                                <input type="radio" asp-for="Race" value="50" name="Race" id="Race[6]" /><span class="badge badge-pill badge-light">50</span>
                                 <label for="Race[6]">Other (SPECIFY)</label>
                                 <input class="form-control" type="text" asp-for="RaceOther" name="RaceOther" />
                             </div>
                             <div>
-                                <input type="radio" asp-for="Race" value="99" name="Race" id="Race[7]" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther" /><span class="badge badge-pill badge-light">99</span>
-                                <label for="Race[7]">Uknown</label>
+                                <input type="radio" asp-for="Race" value="99" name="Race" id="Race[7]" /><span class="badge badge-pill badge-light">99</span>
+                                <label for="Race[7]">Unknown</label>
                             </div>
                         </td>
                     </tr>
@@ -188,36 +188,36 @@
                         </td>
                         <td colspan="3">
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="1" name="SecondaryRace" id="SecondaryRace[1]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">1</span>
+                                <input type="radio" asp-for="SecondaryRace" value="1" name="SecondaryRace" id="SecondaryRace[1]" /><span class="badge badge-pill badge-light">1</span>
                                 <label for="SecondaryRace[1]">White</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="2" name="SecondaryRace" id="SecondaryRace[2]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">2</span>
+                                <input type="radio" asp-for="SecondaryRace" value="2" name="SecondaryRace" id="SecondaryRace[2]" /><span class="badge badge-pill badge-light">2</span>
                                 <label for="SecondaryRace[2]">Black or African American</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="3" name="SecondaryRace" id="SecondaryRace[3]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">3</span>
+                                <input type="radio" asp-for="SecondaryRace" value="3" name="SecondaryRace" id="SecondaryRace[3]" /><span class="badge badge-pill badge-light">3</span>
                                 <label for="SecondaryRace[3]">American Indian or Alaska Native</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="4" name="SecondaryRace" id="SecondaryRace[4]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">4</span>
+                                <input type="radio" asp-for="SecondaryRace" value="4" name="SecondaryRace" id="SecondaryRace[4]" /><span class="badge badge-pill badge-light">4</span>
                                 <label for="SecondaryRace[4]">Native Hawaiian or other Pacific Islander</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="5" name="SecondaryRace" id="SecondaryRace[5]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">5</span>
+                                <input type="radio" asp-for="SecondaryRace" value="5" name="SecondaryRace" id="SecondaryRace[5]" /><span class="badge badge-pill badge-light">5</span>
                                 <label for="SecondaryRace[5]">Asian</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="50" name="SecondaryRace" id="SecondaryRace[6]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">50</span>
+                                <input type="radio" asp-for="SecondaryRace" value="50" name="SecondaryRace" id="SecondaryRace[6]" /><span class="badge badge-pill badge-light">50</span>
                                 <label for="SecondaryRace[6]">Other (SPECIFY)</label>
                                 <input class="form-control" type="text" asp-for="SecondaryRaceOther" />
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="88" name="SecondaryRace" id="SecondaryRace[7]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">88</span>
+                                <input type="radio" asp-for="SecondaryRace" value="88" name="SecondaryRace" id="SecondaryRace[7]" /><span class="badge badge-pill badge-light">88</span>
                                 <label for="SecondaryRace[7]">None Reported</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="SecondaryRace" value="99" name="SecondaryRace" id="SecondaryRace[8]" data-toggle-values="[1,2,3,4,5,,88,99]" data-toggle-targets="SecondaryRaceOther" /><span class="badge badge-pill badge-light">99</span>
+                                <input type="radio" asp-for="SecondaryRace" value="99" name="SecondaryRace" id="SecondaryRace[8]" /><span class="badge badge-pill badge-light">99</span>
                                 <label for="SecondaryRace[8]">Unknown</label>
                             </div>
                         </td>
@@ -230,36 +230,36 @@
                         </td>
                         <td colspan="3">
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="1" name="AdditionalRace" id="AdditionalRace[1]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">1</span>
+                                <input type="radio" asp-for="AdditionalRace" value="1" name="AdditionalRace" id="AdditionalRace[1]" /><span class="badge badge-pill badge-light">1</span>
                                 <label for="AdditionalRace[1]">White</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="2" name="AdditionalRace" id="AdditionalRace[2]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">2</span>
+                                <input type="radio" asp-for="AdditionalRace" value="2" name="AdditionalRace" id="AdditionalRace[2]" /><span class="badge badge-pill badge-light">2</span>
                                 <label for="AdditionalRace[2]">Black or African American</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="3" name="AdditionalRace" id="AdditionalRace[3]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">3</span>
+                                <input type="radio" asp-for="AdditionalRace" value="3" name="AdditionalRace" id="AdditionalRace[3]" /><span class="badge badge-pill badge-light">3</span>
                                 <label for="AdditionalRace[3]">American Indian or Alaska Native</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="4" name="AdditionalRace" id="AdditionalRace[4]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">4</span>
+                                <input type="radio" asp-for="AdditionalRace" value="4" name="AdditionalRace" id="AdditionalRace[4]" /><span class="badge badge-pill badge-light">4</span>
                                 <label for="AdditionalRace[4]">Native Hawaiian or other Pacific Islander</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="5" name="AdditionalRace" id="AdditionalRace[5]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">5</span>
+                                <input type="radio" asp-for="AdditionalRace" value="5" name="AdditionalRace" id="AdditionalRace[5]" /><span class="badge badge-pill badge-light">5</span>
                                 <label for="AdditionalRace[5]">Asian</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="50" name="AdditionalRace" id="AdditionalRace[6]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">50</span>
+                                <input type="radio" asp-for="AdditionalRace" value="50" name="AdditionalRace" id="AdditionalRace[6]" /><span class="badge badge-pill badge-light">50</span>
                                 <label for="AdditionalRace[6]">Other (SPECIFY)</label>
                                 <input class="form-control" type="text" asp-for="AdditionalRaceOther" />
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="88" name="AdditionalRace" id="AdditionalRace[7]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">88</span>
+                                <input type="radio" asp-for="AdditionalRace" value="88" name="AdditionalRace" id="AdditionalRace[7]" /><span class="badge badge-pill badge-light">88</span>
                                 <label for="AdditionalRace[7]">None Reported</label>
                             </div>
                             <div>
-                                <input type="radio" asp-for="AdditionalRace" value="99" name="AdditionalRace" id="AdditionalRace[8]" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther" /><span class="badge badge-pill badge-light">99</span>
+                                <input type="radio" asp-for="AdditionalRace" value="99" name="AdditionalRace" id="AdditionalRace[8]" /><span class="badge badge-pill badge-light">99</span>
                                 <label for="AdditionalRace[8]">Unknown</label>
                             </div>
                         </td>
@@ -480,5 +480,6 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script type="text/javascript" src="~/js/RadioFieldToggle.js"></script>
+    <script type="text/javascript" src="~/js/SubsequentRadioControlDisable.js"></script>
     <script type="text/javascript" src="~/js/CoParticipantDemographics/Edit.js"></script>
 }
