--- a/src/UDS.Net.Web/Views/ParticipantDemographics/Edit.cshtml
+++ b/src/UDS.Net.Web/Views/ParticipantDemographics/Edit.cshtml
@@ -332,4 +332,6 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/RadioFieldToggle.js"></script>
+    <script src="~/js/SubsequentRadioControlDisable.js"></script>
+    <script src="~/js/ParticipantDemographics/Edit.js"></script>
 }
