--- a/src/UDS.Net.Web/Views/ParticipantDemographics/_InitialVisitEthnicity.cshtml
+++ b/src/UDS.Net.Web/Views/ParticipantDemographics/_InitialVisitEthnicity.cshtml
@@ -100,34 +100,34 @@
     <td>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" asp-for="Race" id="Race[1]" value="1" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+            <input class="form-check-input" type="radio" asp-for="Race" id="Race[1]" value="1" name="Race">
             <label class="form-check-label" for="Race[1]"> <span class="badge badge-pill badge-light">1</span> White</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" asp-for="Race" id="Race[2]" value="2" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+            <input class="form-check-input" type="radio" asp-for="Race" id="Race[2]" value="2" name="Race">
             <label class="form-check-label" for="Race[2]"> <span class="badge badge-pill badge-light">2</span> Black or African American</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" asp-for="Race" id="Race[3]" value="3" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+            <input class="form-check-input" type="radio" asp-for="Race" id="Race[3]" value="3" name="Race">
             <label class="form-check-label" for="Race[3]"> <span class="badge badge-pill badge-light">3</span> American Indian or Alaska Native</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" asp-for="Race" id="Race[4]" value="4" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+            <input class="form-check-input" type="radio" asp-for="Race" id="Race[4]" value="4" name="Race">
             <label class="form-check-label" for="Race[4]"> <span class="badge badge-pill badge-light">4</span> Native Hawaiian or other Pacific Islander</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" asp-for="Race" id="Race[5]" value="5" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+            <input class="form-check-input" type="radio" asp-for="Race" id="Race[5]" value="5" name="Race">
             <label class="form-check-label" for="Race[5]"> <span class="badge badge-pill badge-light">5</span> Asian</label>
         </div>
 
         <div class="form-inline">
             <div class="form-group">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" asp-for="Race" id="Race[6]" value="50" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+                    <input class="form-check-input" type="radio" asp-for="Race" id="Race[6]" value="50" name="Race">
                     <label class="form-check-label" for="Race[6]"> <span class="badge badge-pill badge-light">50</span> Other</label>
                 </div>
             </div>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" asp-for="Race" id="Race[99]" value="99" name="Race" data-toggle-values="[1,2,3,4,5,99]" data-toggle-targets="RaceOther">
+            <input class="form-check-input" type="radio" asp-for="Race" id="Race[99]" value="99" name="Race">
             <label class="form-check-label" for="Race[99]"> <span class="badge badge-pill badge-light">99</span> Unknown</label>
         </div>
 
@@ -155,34 +155,34 @@
     <td>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[1]" value="1" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[1]" value="1" name="SecondaryRace">
             <label class="form-check-label" for="SecondaryRace[1]"> <span class="badge badge-pill badge-light">1</span> White</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[2]" value="2" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[2]" value="2" name="SecondaryRace">
             <label class="form-check-label" for="SecondaryRace[2]"> <span class="badge badge-pill badge-light">2</span> Black or African American</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[3]" value="3" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[3]" value="3" name="SecondaryRace">
             <label class="form-check-label" for="SecondaryRace[3]"> <span class="badge badge-pill badge-light">3</span> American Indian or Alaska Native</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[4]" value="4" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[4]" value="4" name="SecondaryRace">
             <label class="form-check-label" for="SecondaryRace[4]"> <span class="badge badge-pill badge-light">4</span> Native Hawaiian or other Pacific Islander</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[5]" value="5" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[5]" value="5" name="SecondaryRace">
             <label class="form-check-label" for="SecondaryRace[5]"> <span class="badge badge-pill badge-light">5</span> Asian</label>
         </div>
 
         <div class="form-inline">
             <div class="form-group">
                 <div class="form-check">
-                    <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[6]" value="50" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+                    <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[6]" value="50" name="SecondaryRace">
                     <label class="form-check-label" for="SecondaryRace[6]"> <span class="badge badge-pill badge-light">50</span> Other</label>
                 </div>
             </div>
@@ -192,7 +192,7 @@
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[7]" value="88" name="SecondaryRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="SecondaryRaceOther">
+            <input class="form-check-input" asp-for="SecondaryRace" type="radio" id="SecondaryRace[7]" value="88" name="SecondaryRace">
             <label class="form-check-label" for="SecondaryRace[7]"> <span class="badge badge-pill badge-light">88</span> None Reported</label>
         </div>
 
@@ -215,34 +215,34 @@
     <td>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[1]" value="1" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[1]" value="1" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[1]"> <span class="badge badge-pill badge-light">1</span> White</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[2]" value="2" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[2]" value="2" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[2]"> <span class="badge badge-pill badge-light">2</span> Black or African American</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[3]" value="3" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[3]" value="3" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[3]"> <span class="badge badge-pill badge-light">3</span> American Indian or Alaska Native</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[4]" value="4" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[4]" value="4" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[4]"> <span class="badge badge-pill badge-light">4</span> Native Hawaiian or other Pacific Islander</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[5]" value="5" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[5]" value="5" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[5]"> <span class="badge badge-pill badge-light">5</span> Asian</label>
         </div>
 
         <div class="form-inline">
             <div class="form-group">
                 <div class="form-check">
-                    <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[6]" value="50" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+                    <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[6]" value="50" name="AdditionalRace">
                     <label class="form-check-label" for="AdditionalRace[6]"> <span class="badge badge-pill badge-light">50</span> Other</label>
                 </div>
             </div>
@@ -253,12 +253,12 @@
 
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[7]" value="88" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[7]" value="88" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[7]"> <span class="badge badge-pill badge-light">88</span> None Reported</label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[8]" value="99" name="AdditionalRace" data-toggle-values="[1,2,3,4,5,88,99]" data-toggle-targets="AdditionalRaceOther">
+            <input class="form-check-input" asp-for="AdditionalRace" type="radio" id="AdditionalRace[8]" value="99" name="AdditionalRace">
             <label class="form-check-label" for="AdditionalRace[8]"> <span class="badge badge-pill badge-light">99</span> Unknown</label>
         </div>
 
