Add option for unknown for number of siblings and additional validation
- Add option for "unknwon/adopted" to number of siblings. The value for this is 77

- text has been added to display this available option.

- values 21 - 76 are invalid inputs

--- a/src/UDS.Net.Web/Views/SubjectFamilyHistory/Edit.cshtml
+++ b/src/UDS.Net.Web/Views/SubjectFamilyHistory/Edit.cshtml
@@ -544,8 +544,8 @@ Model.Visit.Participant.Id,
         <div class="card-body">
             <div class="form-group">
                 <label class="control-label">
-                    <span class="counter"></span> How many full siblings does the subject have? <input class="form-control"
-                                                                            asp-for="SiblingNumber" /><br>
+                    <span class="counter"></span> How many full siblings does the subject have? <em>(77 = Adopted, unknown)</em><input class="form-control"
+                                                                                                                             asp-for="SiblingNumber" /><br>
                     <span class="text-danger" asp-validation-for="SiblingNumber"></span>
                 </label>
                 @if (Model.Visit.VisitType == VisitType.IVP)
