Add range validation to a3 and include b8 adjustments

--- a/src/UDS.Net.Web/Views/NeurologicalExaminationFindings/Edit.cshtml
+++ b/src/UDS.Net.Web/Views/NeurologicalExaminationFindings/Edit.cshtml
@@ -58,6 +58,9 @@
             <tr>
                 <td colspan="5">
                     Please complete the appropriate sections below, using your best clinical judgment in selecting findings that indicate the likely syndrome(s) that is/are present.
+                    <div>
+                        <span asp-validation-for="AtLeastOneFindingSyndromeIndicated" class="text-danger"></span>
+                    </div>
                 </td>
             </tr>
         </tbody>
