Fixes A1 and A2 radio disables for race, and adds valid classes and formatting for radio groups
Fixes the logic for the A1 and A2 radio disable logic for A1 and A2 questions, updates HTML for radio buttons and adds classes for disables to affect the entire radio button

--- a/src/UDS.Net.Web/Views/ParticipantDemographics/Edit.cshtml
+++ b/src/UDS.Net.Web/Views/ParticipantDemographics/Edit.cshtml
@@ -331,7 +331,6 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script src="~/js/RadioFieldToggle.js"></script>
-    <script src="~/js/SubsequentRadioControlDisable.js"></script>
-    <script src="~/js/ParticipantDemographics/Edit.js"></script>
+    <script asp-append-version="true" type="text/javascript" src="~/js/SubsequentRadioControlDisable.js"></script>
+    <script asp-append-version="true" type="text/javascript" src="~/js/RacialQuestions.js"></script>
 }
